--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ Fixed: removed leading slash -->
+    <!-- ✅ must be relative (./), not absolute (/) -->
     <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
