--- a/index.html
+++ b/index.html
@@ -8,7 +8,5 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ must be relative (./), not absolute (/) -->
-    <script type="module" src="./src/main.tsx"></script>
-  </body>
+    <script type="module" src="/src/main.tsx"></script>
 </html>
