--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- Use relative path without leading slash -->
+    <script type="module" src="./src/main.tsx"></script>
+  </body>
 </html>
