--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Use relative path without leading slash -->
-    <script type="module" src="./src/main.tsx"></script>
+    <!-- Leave this empty; Vite will inject the entry script automatically -->
   </body>
 </html>
